// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<button
  class="css-10yl9t5"
  color="#9DB06A"
  type="text"
>
  ?
</button>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<button
  class="css-2lirzo"
  color="#E86C76"
  type="text"
>
  ?
</button>
`;
